install-event-filter: Fix crash when there is no child at the given depth

BUG: 464372